# openrouter-ocaml

./: AGENTS.md  LICENSE  PROJECT.md  README.md  dune  dune-project  dune-workspace  openrouter-ocaml.opam  openrouter_api.opam  openrouter_api.opam.template
.github/workflows/: build.yml  odoc.yaml  oxcaml.yml
dune.lock/: async.v0.18~preview.130.91+190.pkg  async_kernel.v0.18~preview.130.91+190.pkg  async_log.v0.18~preview.130.91+190.pkg  async_rpc_kernel.v0.18~preview.130.91+190.pkg  async_ssl.v0.18~preview.130.91+190.pkg  async_unix.v0.18~preview.130.91+190.pkg  base.v0.18~preview.130.91+190.pkg  base_bigstring.v0.18~preview.130.91+190.pkg  base_quickcheck.v0.18~preview.130.91+190.pkg  basement.v0.18~preview.130.91+190.pkg  bin_prot.v0.18~preview.130.91+190.pkg  capitalization.v0.18~preview.130.91+190.pkg  capsule.v0.18~preview.130.91+190.pkg  capsule0.v0.18~preview.130.91+190.pkg  core.v0.18~preview.130.91+190.pkg  core_extended.v0.18~preview.130.91+190.pkg  core_kernel.v0.18~preview.130.91+190.pkg  core_unix.v0.18~preview.130.91+190.pkg  expect_test_helpers_core.v0.18~preview.130.91+190.pkg  fieldslib.v0.18~preview.130.91+190.pkg  flexible_sexp.v0.18~preview.130.91+190.pkg  int_repr.v0.18~preview.130.91+190.pkg  jane-street-headers.v0.18~preview.130.91+190.pkg  jsonaf.v0.18~preview.130.91+190.pkg  jst-config.v0.18~preview.130.91+190.pkg  lock.dune  mdx.2.5.2.pkg  ocaml-base-compiler.5.2.1.pkg  ocaml-version.4.1.1.pkg  ocaml.5.2.1.pkg  ocaml_intrinsics_kernel.v0.18~preview.130.91+190.pkg  odoc-parser.3.2.1.pkg  parsexp.v0.18~preview.130.91+190.pkg  pipe_with_writer_error.v0.18~preview.130.91+190.pkg  portable.v0.18~preview.130.91+190.pkg  ppx_array_base.v0.18~preview.130.91+190.pkg  ppx_assert.v0.18~preview.130.91+190.pkg  ppx_base.v0.18~preview.130.91+190.pkg  ppx_bench.v0.18~preview.130.91+190.pkg  ppx_bin_prot.v0.18~preview.130.91+190.pkg  (+60 more)
example/: chat_options.ml  chat_options.mli  dune  help.txt  openrouter_api_example.ml
lib/: api_error.ml  api_error.mli  completions.ml  completions.mli  dune  embeddings.ml  embeddings.mli  generation.ml  generation.mli  http.ml  http.mli  json_helper.ml  json_helper.mli  models.ml  models.mli  openrouter_api.ml  openrouter_api.mli  string_float.ml  string_float.mli  string_variant.ml  string_variant.mli  tagged_union.ml  tagged_union.mli
test/: dune  fixture_helpers.ml  test_api_error_fixtures.ml  test_chat_response_fixtures.ml  test_embeddings_fixtures.ml  test_generation_fixtures.ml  test_models_fixtures.ml  test_request_serialization.ml  test_response_parsing.ml  test_stream_fixtures.ml
test/responses/: anthropic_haiku_reasoning.json  api_error_bad_model.json  bedrock_null_system_fingerprint.json  cache_hit.json  debug_echo_upstream_body.ndjson  deepseek_r1.json  embeddings.json  generation.json  image_output.json  models_list.json  openai_gpt5_mini_reasoning.json  openai_logprobs.json  stream_anthropic_haiku.ndjson  stream_anthropic_reasoning.ndjson  stream_audio_output.ndjson  stream_openai_with_usage.ndjson  web_search.json
