(executable
 (name openrouter_api_example)
 (libraries
  openrouter_api
  async
  core_unix.command_unix
  textutils.ascii_table)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

(rule
 (target help.txt)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run %{exe:openrouter_api_example.exe} help -recursive -flags))))
